Individual Photo Pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,14 +18,10 @@
         <!-- Portfolio item 1-->
         <div class="portfolio-item">
           <a
-            class="portfolio-link"
-            data-bs-toggle="modal"
-            href="#portfolioModal1"
+            href="/photos/<%=photos[i]._id %>"
           >
             <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
+            
             </div>
             <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
           </a>
@@ -148,3 +144,5 @@
     </div>
   </div>
 </div>
+
+
