--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
             <div class="portfolio-hover">
             
             </div>
-            <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
+            <img class="img-fluid" src="<%= photos[i].image %>" alt="..." />
           </a>
           <div class="portfolio-caption">
             <div class="portfolio-caption-heading"><%= photos[i].title %></div>
