--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -10,7 +10,7 @@
         <!-- Portfolio item 1-->
         <div class="portfolio-item">
           
-            <img class="img-fluid" src="/assets/img/portfolio/1.jpg" alt="..." />
+            <img class="img-fluid" src="<%= photo.image %>" alt="..." />
           </a>
           <div class="portfolio-caption">
             <div class="portfolio-caption-heading"><%= photo.title %></div>
