--- a/views/add.ejs
+++ b/views/add.ejs
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="offset-2 col-lg-8 ">
 
-                    <form method="POST" action="/photos" class="tm-contact-form">
+                    <form method="POST" action="/photos" class="tm-contact-form" encType="multipart/form-data">
                         <div class="form-group mb-5">   <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Title" required>
                         </div>
 
