--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11549,7 +11549,7 @@ header.masthead .masthead-heading {
   background-color: #e9ecef;
 }
 .timeline > li {
-  position: relative;
+  position: static;
   min-height: 50px;
   margin-bottom: 50px;
 }
@@ -11776,4 +11776,34 @@ section#contact form#contactForm :-ms-input-placeholder {
   text-align: center;
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.del-btn {
+  background-color: black;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+/* Darker background on mouse-over */
+.del-btn:hover {
+  background-color: red;
+}
+
+.up-btn {
+  background-color: DodgerBlue;
+  border: none;
+  color: white;
+  padding: 12px 16px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+/* Darker background on mouse-over */
+.up-btn:hover {
+  background-color: rgb(8, 235, 148);
 }
