--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -27,7 +27,7 @@
   </div>
   <div  class="clearfix" style=" margin-top: 10px;">
     <a style="margin-left: 75%;" href="/photos/edit/<%= photo._id %>" class="up-btn "><span>Update Post</span></a>
-    <a style="margin-left: 15px;" href="" class="del-btn float-left "
+    <a style="margin-left: 15px;" href="/photos/<%= photo._id %>?_method=DELETE" class="del-btn float-left "
       onclick="return confirm('ARE YOU SURE?')">Delete Post</a>
   </div>
 </section>
